--- a/templates/403.html
+++ b/templates/403.html
@@ -5,6 +5,6 @@
     <h1 class="text-danger">403</h1>
     <h2>Access Forbidden</h2>
     <p>Bạn không có quyền truy cập trang này.</p>
-    <a href="{{ url_for('dashboard') }}" class="btn btn-primary">Về trang chủ</a>
+    <a href="{{ url_for('main_dashboard') }}" class="btn btn-primary">Về trang chủ</a>
 </div>
 {% endblock %}
